--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -76,8 +76,7 @@
     "## **1. Introduction**\n",
     "----------------------------------\n",
     "\n",
-    "xxxfind patterns...    \n",
-    "For no particular reason, we chose to use data from the german DAX index and its components."
+    "In this project we will use LSTM Neural Networks to predict the future development of stock prices (the adjusted close in our case) based solely on historical prices of that exact stock (or index). We'll use two approaches: a straightforward, rather naive method to predict actual stock prices in the future and a more comprehensive approach categorizing stock price development into discrete groups. By analyzing the historical data, we aim to uncover insights into the predictability of stock price movements and the potential of pattern recognition in financial forecasting. For no particular reason, we chose to use data from the german DAX index and its components."
    ]
   },
   {
@@ -606,10 +605,10 @@
     "Our naive model is very simplistic, it consists of a single LSTM layer with 8 input neurons and got trained for just one epoch. \n",
     "Nevertheless, our performance looks increadibly well.  \n",
     "\n",
-    "That is because we effectivly only predict the value of the following day after an input series, but don't use our own predictions when predicting the next day after.\n",
+    "That is because we effectivly only predict the value of the following day after an input series, but don't use our own predictions when predicting the next day after that.\n",
     "What happens is, that every prediction is based on 60 (when the lag is 60) ground truth values.  \n",
     "So everything this naive model does, is predicting a price, that is very close to the last couple values in the input series. \n",
-    "If we would use our own predictions for following predictions with this model, the green plot would look linear, predicting values of the same last price over and over again.\n",
+    "If we would use our own predictions for following predictions with this model, the green plot would most likely look kind of linear, predicting values close to the same last price over and over again.\n",
     "\n",
     "To visualize that, we can see in the plot how the green line just mimics the orange line with a slight time delay.  \n",
     "\n",
