--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -550,7 +550,7 @@
     "Our naive model is very simplistic, it consists of a single LSTM layer with 8 input neurons and got trained for just one epoch. Nevertheless, our performance looks increadibly well.  \n",
     "\n",
     "That is because we effectivly only predict the value of the following day after an input series, but don't use our own predictions when predicting the next day after that.\n",
-    "What happens is, that every prediction is based on 60 (when the lag is 60) ground truth values.So everything this naive model does, is predicting a price, that is very close to the last couple values in the input series. If we would use our own predictions for following predictions with this model, the green plot would most likely look kind of linear, predicting values close to the same last price over and over again. To visualize that, we can see in the plot how the green line just mimics the orange line with a slight time delay.  \n",
+    "What happens is, that every prediction is based on 60 (when the lag is 60) ground truth values. So everything this naive model does, is predicting a price, that is very close to the last couple values in the input series. To visualize that, we can see in the plot how the green line just mimics the orange line with a slight time delay. If we would use our own predictions as input for following predictions (i.e. predicting further into the future) the green plot would most likely look linear, predicting values close to the same last price over and over again. \n",
     "\n",
     "Exactly this approach has been chosen by multiple people, including the linked article and other public Kaggle notebooks.\n",
     "In real life applications this model is useless though."
