small conclusion edit

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2662,7 +2662,7 @@
     "## **7. Conclusion**\n",
     "---------------------------------\n",
     "\n",
-    "For our classification we obtained no results that would be of value. Unfortunately also trying different hyperparameters didn't lead to better results. Also unfortunately we don't really know what's the issue with our model.\n",
+    "For our classification we obtained no results that would be of value. Unfortunately also trying different hyperparameters didn't lead to better results.\n",
     "The second one, however, turned out better than expected with good predictions. This was rather unexpected since this was the more precise and thus harder task whereas the classification was on a more abstract level.\n",
     "The success of the second model suggests that future work can rework the classification task and further extend and improve the second model.\n",
     "\n",
